add auth to api
